Firma del autor en historia.txt

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>blogpost_test</title>
 </head>
 <body>
-    <h1>Aqui va el blogpost</h1>
+    <h1 id="subtittle">Aqui va el blogpost</h1>
     <p>Y en esta parte va un parrafo de texto. Atte: OKAPI_GG</p>
 </body>
 </html>
