Commit al master del blogpost en su versión más reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>blogpost_test</title>
-</head>
-<body>
-    <h1 id="subtittle">Aqui va el blogpost</h1>
-    <p>Y en esta parte va un parrafo de texto. Atte: OKAPI_GG</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/styles.css">
+        <title>blogpost_test</title>
+    </head>
+    <body>
+        <div id="container">
+            <div id="post">
+                <h1>MSI</h1>
+                <p>Micro-Star International, Co., Ltd (en chino: 微星科技股份有限公司,
+                mayormente conocida por sus siglas MSI) es una empresa multinacional
+                taiwanesa de tecnología de la información con sede en Nuevo Taipéi, Taiwán.</p>
+            </div>   
+        </div>
+    </body>
 </html>
