primer rama la 'cabecera', prueba 0.0.1

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>MSI</h1>
                 <p>Micro-Star International, Co., Ltd (en chino: 微星科技股份有限公司,
