Cabecera version final

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Micro-Star International
+                <span id="tagline">(MSI por sus siglas en ingles)</span>
             </div>
             <div id="post">
                 <h1>MSI</h1>
