Cambios en la fuente de parrafo del container. MASTER

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,9 @@
                 <p>Micro-Star International, Co., Ltd (en chino: 微星科技股份有限公司,
                 mayormente conocida por sus siglas MSI) es una empresa multinacional
                 taiwanesa de tecnología de la información con sede en Nuevo Taipéi, Taiwán.</p>
+                <p>Su acción hace parte de la Bolsa de Taiwán2​ y fue creada en agosto de 1986
+                   por 5 fundadores - Hsu Xiang (conocido como Joseph Hsu),3​ Huang Jinqing (conocido como Jeans Huang),
+                   45​ Lin Wentong (conocido como Frank Lin),6​ Yu Xian'neng (conocido como Kenny Yu), y Lu Qilong (conocido como Henry Lu).</p>
             </div>   
         </div>
     </body>
