--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         <div id="container">
             <div id="cabecera">
                 Micro-Star International
-                <span id="tagline">(MSI por sus siglas en ingles)</span>
+                <span id="tagline">(MSI por sus siglas en ingles)NVIDIA RTX4090</span>
             </div>
             <div id="post">
                 <h1>MSI</h1>
