ADD text for found

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         <div id="container">
             <div id="cabecera">
                 Micro-Star International
-                <span id="tagline">(MSI por sus siglas en ingles)</span>
+                <span id="tagline">(MSI por sus siglas en ingles)AMD Ryzen550g</span>
             </div>
             <div id="post">
                 <h1>MSI</h1>
@@ -21,6 +21,9 @@
                 <p>Su acción hace parte de la Bolsa de Taiwán2​ y fue creada en agosto de 1986
                    por 5 fundadores - Hsu Xiang (conocido como Joseph Hsu),3​ Huang Jinqing (conocido como Jeans Huang),
                    45​ Lin Wentong (conocido como Frank Lin),6​ Yu Xian'neng (conocido como Kenny Yu), y Lu Qilong (conocido como Henry Lu).</p>
+                <p>En 1986, un pequeño grupo de empleados fundó la empresa, para la fabricación de los primeros computadores.
+                   Posteriormente, fabricaron placas base y tarjetas de vídeo (tarjetas gráficas).
+                   La compañía fue fundada en Taipéi, Taiwán.</p>
             </div>   
         </div>
     </body>
