Update to version 2

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/styles.css">
-        <title>blogpost_MSI</title>
+        <title>blogpost_MSI v2.0.1></title>
     </head>
     <body>
         <div id="container">
@@ -26,5 +26,5 @@
                    La compañía fue fundada en Taipéi, Taiwán.</p>
             </div>   
         </div>
-    </body>
+    </body> 
 </html>
