Add background color and crocodile logo

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img src="imagenes/cocodrilo.png" id="logo">
                 Micro-Star International
                 <span id="tagline">(MSI por sus siglas en ingles)NVIDIA RTX4090</span>
             </div>
