add footer the project

--- a/blogpost.html
+++ b/blogpost.html
@@ -24,7 +24,8 @@
                 <p>En 1986, un pequeño grupo de empleados fundó la empresa, para la fabricación de los primeros computadores.
                    Posteriormente, fabricaron placas base y tarjetas de vídeo (tarjetas gráficas).
                    La compañía fue fundada en Taipéi, Taiwán.</p>
-            </div>   
+            </div>
+            <div id="footer">ATTE: ToroBelico</div>  
         </div>
     </body> 
 </html>
