--- a/blogpost.html
+++ b/blogpost.html
@@ -12,14 +12,14 @@
             <div id="cabecera">
                 <img src="imagenes/cocodrilo.png" id="logo">
                 Micro-Star International
-                <span id="tagline">MSI (por sus siglas en ingles)NVIDIA RTX4090</span>
+                <span id="tagline">MSI (por sus siglas en ingles) NVIDIA RTX4090</span>
             </div>
             <div id="post">
                 <h1>MSI</h1>
                 <p>Micro-Star International, Co., Ltd (en chino: 微星科技股份有限公司,
                 mayormente conocida por sus siglas MSI) es una empresa multinacional
-                taiwanesa de tecnología de la información con sede en Nuevo Taipéi, Taiwán.</p>
-                <p>Su acción hace parte de la Bolsa de Taiwán2​ y fue creada en agosto de 1986
+                taiwanesa de tecnología de la información con sede en Nuevo Taip&eacute;i, Taiwán.</p>
+                <p>Su acción hace parte de la Bolsa de Taiw&aacute;n2​ y fue creada en agosto de 1986
                    por 5 fundadores - Hsu Xiang (conocido como Joseph Hsu),3​ Huang Jinqing (conocido como Jeans Huang),
                    45​ Lin Wentong (conocido como Frank Lin),6​ Yu Xian'neng (conocido como Kenny Yu), y Lu Qilong (conocido como Henry Lu).</p>
                 <p>En 1986, un pequeño grupo de empleados fundó la empresa, para la fabricación de los primeros computadores.
