--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             <div id="cabecera">
                 <img src="imagenes/cocodrilo.png" id="logo">
                 Micro-Star International
-                <span id="tagline">MSI (por sus siglas en ingles) NVIDIA RTX4090</span>
+                <span id="tagline">MSI (por sus siglas en ingles)</span>
             </div>
             <div id="post">
                 <h1>MSI</h1>
