--- a/blogpost.html
+++ b/blogpost.html
@@ -19,12 +19,14 @@
                 <p>Micro-Star International, Co., Ltd (en chino: 微星科技股份有限公司,
                 mayormente conocida por sus siglas MSI) es una empresa multinacional
                 taiwanesa de tecnología de la información con sede en Nuevo Taip&eacute;i, Taiwán.</p>
+                <p ><img src="imagenes/DragonRojo.jpg" alt="LogoMSI" width="100%"></p>
                 <p>Su acción hace parte de la Bolsa de Taiw&aacute;n​ y fue creada en agosto de 1986
                    por 5 fundadores - Hsu Xiang (conocido como Joseph Hsu),3​ Huang Jinqing (conocido como Jeans Huang),
                    45​ Lin Wentong (conocido como Frank Lin),6​ Yu Xian'neng (conocido como Kenny Yu), y Lu Qilong (conocido como Henry Lu).</p>
+   
                 <p>En 1986, un pequeño grupo de empleados fundó la empresa, para la fabricación de los primeros computadores.
-                   Posteriormente, fabricaron placas base y tarjetas de vídeo (tarjetas gráficas).
-                   La compañía fue fundada en Taipéi, Taiwán.</p>
+                Posteriormente, fabricaron placas base y tarjetas de vídeo (tarjetas gráficas).
+                La compañía fue fundada en Taipéi, Taiwán.</p>
             </div>
             <div id="footer">ATTE: ToroBelico</div>  
         </div>
